Esqueleto 1.0 (no optimizado)

--- a/Actividades Clase/Tarea CG 2 PIVOTE/A01710879.html
+++ b/Actividades Clase/Tarea CG 2 PIVOTE/A01710879.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>WebGL 3D rotation around point</title>
-        <link rel="stylesheet" href="./../00_common/styles.css">
-        <script defer type="module" src="./wheel.js"></script>
+        <link rel="stylesheet" href="./00_common/styles.css">
+        <script defer type="module" src="./A01710879.js"></script>
     </head>
 
     <body>
