--- a/Actividades Clase/RetoCiudad/index.html
+++ b/Actividades Clase/RetoCiudad/index.html
@@ -1,14 +1,18 @@
+<!-- public/index.html -->
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Simulación de Ciudad en WebGL</title>
-    <style>
-        body { margin: 0; overflow: hidden; }
-        canvas { display: block; }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Mesa WebGL Visualization</title>
+  <link rel="stylesheet" href="./WEBGL/styles.css">
+  <link href="./WEBGL/main_page.css" rel="stylesheet">
+  <style>
+    body { margin: 0; overflow: hidden; }
+  </style>
 </head>
 <body>
-    <script type="module" src="/main.js"></script>
+  <div id="elements"></div>
+  <!-- Include the main JavaScript file -->
+  <script type="module" src="main.js"></script>
 </body>
 </html>
