--- a/Actividades Clase/RetoCiudad/index.html
+++ b/Actividades Clase/RetoCiudad/index.html
@@ -1,13 +1,12 @@
-<!-- public/index.html -->
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Mesa WebGL Visualization</title>
-  <!-- Corrected paths to CSS files -->
-  <link rel="stylesheet" href="./styles.css">
-  <link rel="stylesheet" href="./main_page.css">
-  <!-- Removed inline styles for now to avoid conflicts -->
+  <!-- Link to your CSS files -->
+  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/main_page.css">
 </head>
 <body>
   <div id="headerContainer">
@@ -15,6 +14,7 @@
   </div>
   <div id="elements"></div>
   <!-- Include the main JavaScript file -->
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
+
