--- a/Actividades Clase/RetoCiudad/index.html
+++ b/Actividades Clase/RetoCiudad/index.html
@@ -14,7 +14,7 @@
   </div>
   <div id="elements"></div>
 
-  <canvas id="glCanvas" width="640" height="480"></canvas>
+  <canvas id="canvas" width="640" height="480"></canvas>
 
 
   <script type="module" src="src/city.js"></script>
